--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -44,8 +44,8 @@ Menu_MDI_Child MENU
         MENUITEM "&Test archive", IDM__TEST_ARCHIVE
         MENUITEM "&Recompress archive", IDM__RECOMPRESS_ARCHIVE
         MENUITEM "&Find files in archive", IDM__FIND_FILE_IN_ARCHIVE
-        MENUITEM SEPARATOR
         MENUITEM "Find &contents in archive", IDM_FIND__CONTENTS_IN_ARCHIVE
+        MENUITEM SEPARATOR
         MENUITEM "&Compare archives", IDM_COMPARE_ARCHIVES
         MENUITEM "&Merge archives", IDM_MERGE_ARCHIVES
     }
@@ -106,6 +106,34 @@ Menu_MDI_Main MENU
     }
 }
 
+
+
+//
+// Dialog resources
+//
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
+About_box DIALOG 0, 0, 256, 210
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+CAPTION "About AZip"
+FONT 8, "Ms Shell Dlg"
+{
+    DEFPUSHBUTTON   "Close", IDOK, 103, 188, 50, 14
+    LTEXT           "AZip - a portable Zip user interface", IDC_STATIC, 47, 10, 165, 8, SS_LEFT
+    LTEXT           "Copyright © Gautier de Montmollin 2012", IDC_STATIC, 47, 25, 151, 8, SS_LEFT
+    LTEXT           "MIT Open Source License", IDC_STATIC, 47, 40, 100, 8, SS_LEFT
+    LTEXT           "Internet:", IDC_STATIC, 10, 66, 30, 8, SS_LEFT
+    LTEXT           "http://sf.net/projects/azip", AZip_URL, 57, 66, 132, 8, SS_LEFT
+    GROUPBOX        "Software made with the following free, open source components:", IDC_STATIC, 5, 105, 247, 81
+    LTEXT           "GNAT -  free Ada compiler", GNAT_URL, 23, 119, 100, 8, SS_LEFT
+    LTEXT           "GNAT_Version", GNAT_Version, 133, 119, 113, 8, SS_LEFT
+    LTEXT           "GNAVI / GWindows", GNAVI_URL, 23, 134, 118, 8, SS_LEFT
+    LTEXT           "ResEdit", ResEdit_URL, 23, 149, 170, 8, SS_LEFT
+    LTEXT           "Zip-Ada", ZipAda_URL, 23, 164, 75, 8, SS_LEFT
+    LTEXT           "ZA_Version", ZipAda_Version, 133, 164, 113, 8, SS_LEFT
+}
+
+
+
 //
 // Accelerator resources
 //
@@ -115,6 +143,7 @@ Main_Menu ACCELERATORS
     "N",            IDM__NEW_FILE, VIRTKEY, CONTROL
     "O",            IDM__OPEN_FILE, VIRTKEY, CONTROL
 }
+
 
 
 //
