--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -39,7 +39,7 @@ Menu_MDI_Child MENU
     POPUP "&Edit"
     {
         MENUITEM "Select &All\tCtrl+A", IDM_Select_all
-        MENUITEM "Delete selected\tDel", IDM_Delete_Selected
+        MENUITEM "Delete selected\tDel", IDM_Delete_selected
     }
     POPUP "&Action"
     {
@@ -142,7 +142,7 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VIS
 CAPTION "AZip is working"
 FONT 8, "Ms Shell Dlg"
 {
-    PUSHBUTTON      "Cancel", IDCANCEL, 95, 96, 50, 14
+    PUSHBUTTON      "Cancel", Cancel_button, 95, 96, 50, 14
     CONTROL         "", Archive_Progress, PROGRESS_CLASS, 0, 7, 74, 227, 17
     LTEXT           "Adding...", Entry_operation_name, 9, 12, 63, 8, SS_LEFT
     LTEXT           "Some file", Entry_name, 9, 30, 170, 8, SS_LEFT
@@ -160,7 +160,7 @@ Main_Menu ACCELERATORS
     "N",            IDM__NEW_FILE, VIRTKEY, CONTROL
     "O",            IDM__OPEN_FILE, VIRTKEY, CONTROL
     "A",            IDM_Select_all, VIRTKEY, CONTROL
-    VK_DELETE,     IDM_Delete_Selected, VIRTKEY
+    VK_DELETE,     IDM_Delete_selected, VIRTKEY
 }
 
 
