--- a/trunk/gwindows/azip.rc
+++ b/trunk/gwindows/azip.rc
@@ -41,8 +41,9 @@ Menu_MDI_Child MENU
     POPUP "&Edit"
     {
         MENUITEM "Select &All\tCtrl+A", IDM_Select_all
-        MENUITEM "&Extract selected or whole archive", IDM_EXTRACT1
-        MENUITEM "Delete selected\tDel", IDM_Delete_selected
+        MENUITEM "&Extract...", IDM_EXTRACT1
+        MENUITEM SEPARATOR
+        MENUITEM "Delete entries\tDel", IDM_Delete_selected
         MENUITEM "A&dd files...", IDM_A_DD_FILES___1
     }
     POPUP "&Tools"
@@ -143,14 +144,14 @@ FONT 8, "Ms Shell Dlg"
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 Progress_box DIALOG 0, 0, 242, 116
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "AZip is working"
+CAPTION "AZip is busy"
 FONT 8, "Ms Shell Dlg"
 {
     LTEXT           "Adding...", Entry_operation_name, 7, 12, 218, 10, SS_LEFT
-    LTEXT           "Some file", Entry_name, 7, 30, 228, 10, SS_LEFT
+    LTEXT           "Some file", Entry_name, 7, 30, 228, 8, SS_LEFT
     CONTROL         "", File_Progress, PROGRESS_CLASS, 0, 7, 52, 227, 9
     CONTROL         "", Archive_Progress, PROGRESS_CLASS, 0, 7, 74, 227, 17
-    PUSHBUTTON      "Cancel", Cancel_button, 95, 96, 50, 14
+    PUSHBUTTON      "Cancel", Cancel_button, 96, 96, 50, 14
 }
 
 
