--- a/trunk/gwindows/azip.rc
+++ b/trunk/gwindows/azip.rc
@@ -187,6 +187,7 @@ Main_Menu ACCELERATORS
     "T",            IDM__TEST_ARCHIVE, VIRTKEY, SHIFT
     "F",            IDM_FIND_IN_ARCHIVE, VIRTKEY, CONTROL
     VK_ADD,        IDM_ADD_FILES, VIRTKEY
+    VK_F12,        IDM__SAVE_ARCHIVE_AS, VIRTKEY
 }
 
 
