--- a/trunk/gwindows/azip.rc
+++ b/trunk/gwindows/azip.rc
@@ -120,16 +120,16 @@ Menu_MDI_Main MENU
 //
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 About_box DIALOG 0, 0, 256, 210
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
 CAPTION "About AZip"
 FONT 8, "Ms Shell Dlg"
 {
-    DEFPUSHBUTTON   "Close", IDOK, 103, 190, 50, 14
-    LTEXT           "AZip - a portable Zip user interface", IDC_STATIC, 47, 10, 165, 8, SS_LEFT
-    LTEXT           "Copyright © Gautier de Montmollin 2012", IDC_STATIC, 47, 25, 151, 8, SS_LEFT
-    LTEXT           "MIT Open Source License", IDC_STATIC, 47, 40, 100, 8, SS_LEFT
-    LTEXT           "Internet:", IDC_STATIC, 10, 66, 30, 8, SS_LEFT
-    LTEXT           "http://sf.net/projects/azip", AZip_URL, 57, 66, 132, 8, SS_LEFT
+    ICON            AZip_Icon, IDC_STATIC, 5, 12, 65, 65, SS_ICON
+    LTEXT           "AZip - a portable Zip user interface", IDC_STATIC, 76, 10, 165, 8, SS_LEFT
+    LTEXT           "Copyright © Gautier de Montmollin 2012", IDC_STATIC, 76, 25, 151, 8, SS_LEFT
+    LTEXT           "MIT Open Source License", IDC_STATIC, 76, 40, 100, 8, SS_LEFT
+    LTEXT           "Internet:", IDC_STATIC, 10, 70, 30, 8, SS_LEFT
+    LTEXT           "http://sf.net/projects/azip", AZip_URL, 57, 70, 132, 8, SS_LEFT
     GROUPBOX        "Software made with the following free, open source components:", IDC_STATIC, 5, 105, 247, 81
     LTEXT           "GNAT -  free Ada compiler", GNAT_URL, 23, 119, 100, 8, SS_LEFT
     LTEXT           "GNAT_Version", GNAT_Version, 133, 119, 113, 8, SS_LEFT
@@ -137,13 +137,15 @@ FONT 8, "Ms Shell Dlg"
     LTEXT           "ResEdit", ResEdit_URL, 23, 149, 170, 8, SS_LEFT
     LTEXT           "Zip-Ada", ZipAda_URL, 23, 164, 75, 8, SS_LEFT
     LTEXT           "ZA_Version", ZipAda_Version, 133, 164, 113, 8, SS_LEFT
+    DEFPUSHBUTTON   "Close", IDOK, 103, 190, 50, 14
+    PUSHBUTTON      "Credits", Credits_button, 5, 190, 50, 14, WS_DISABLED
 }
 
 
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 Find_box DIALOG 0, 0, 191, 95
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
 CAPTION "Find"
 FONT 8, "Ms Shell Dlg"
 {
@@ -159,8 +161,8 @@ FONT 8, "Ms Shell Dlg"
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 Progress_box DIALOG 0, 0, 242, 116
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "AZip is busy"
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
+CAPTION "AZip is busy."
 FONT 8, "Ms Shell Dlg"
 {
     LTEXT           "Adding...", Entry_operation_name, 7, 12, 218, 10, SS_LEFT
@@ -190,15 +192,27 @@ Main_Menu ACCELERATORS
     VK_F12,        IDM__SAVE_ARCHIVE_AS, VIRTKEY
 }
 
+
+
 //
 // Icon resources
 //
-
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 AAA_Main_Icon      ICON           "icons/azip.ico"
 
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+AZip_Doc_Icon_Name ICON           "icons/azip_doc.ico"
+
+
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 AZip_Doc_Icon      ICON           "icons/azip_doc.ico"
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+AZip_Icon          ICON           "icons/azip.ico"
+
+
 
 //
 // Version Information resources
