--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -42,7 +42,7 @@ Menu_MDI_Child MENU
     {
         MENUITEM "Select &all\tCtrl+A", IDM_Select_all
         MENUITEM "&Unselect all\tCtrl+U", IDM_Unselect_all
-        MENUITEM "&Extract...", IDM_EXTRACT
+        MENUITEM "&Extract...\tShift+E", IDM_EXTRACT
         MENUITEM SEPARATOR
         MENUITEM "Delete entries\tDel / -", IDM_Delete_selected
         MENUITEM "A&dd files...\t+", IDM_ADD_FILES
@@ -124,12 +124,14 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VIS
 CAPTION "About AZip"
 FONT 8, "Ms Shell Dlg"
 {
-    ICON            AZip_Icon, IDC_STATIC, 5, 12, 65, 65, SS_ICON
-    LTEXT           "AZip - a portable Zip user interface", IDC_STATIC, 76, 10, 165, 8, SS_LEFT
-    LTEXT           "Copyright © Gautier de Montmollin 2012", IDC_STATIC, 76, 25, 151, 8, SS_LEFT
-    LTEXT           "MIT Open Source License", IDC_STATIC, 76, 40, 100, 8, SS_LEFT
-    LTEXT           "Internet:", IDC_STATIC, 10, 70, 30, 8, SS_LEFT
-    LTEXT           "http://sf.net/projects/azip", AZip_URL, 57, 70, 132, 8, SS_LEFT
+    ICON            AZip_Icon, IDC_STATIC, 9, 12, 22, 22, SS_ICON
+    LTEXT           "AZip - a portable Zip user interface", IDC_STATIC, 50, 10, 165, 8, SS_LEFT
+    LTEXT           "Copyright © Gautier de Montmollin 2012", IDC_STATIC, 50, 25, 151, 8, SS_LEFT
+    LTEXT           "MIT Open Source License", IDC_STATIC, 50, 40, 100, 8, SS_LEFT
+    LTEXT           "Internet:", IDC_STATIC, 10, 60, 30, 8, SS_LEFT
+    LTEXT           "http://sf.net/projects/azip", AZip_URL, 57, 60, 132, 8, SS_LEFT
+    LTEXT           "Version:", IDC_STATIC, 10, 80, 30, 8, SS_LEFT
+    LTEXT           "0.95", IDC_STATIC, 57, 80, 132, 8, SS_LEFT
     GROUPBOX        "Software made with the following free, open source components:", IDC_STATIC, 5, 105, 247, 81
     LTEXT           "GNAT -  free Ada compiler", GNAT_URL, 23, 119, 100, 8, SS_LEFT
     LTEXT           "GNAT_Version", GNAT_Version, 133, 119, 113, 8, SS_LEFT
@@ -185,6 +187,7 @@ Main_Menu ACCELERATORS
     "W",            IDM__CLOSE_ARCHIVE, VIRTKEY, CONTROL
     "A",            IDM_Select_all, VIRTKEY, CONTROL
     "U",            IDM_Unselect_all, VIRTKEY, CONTROL
+    "E",            IDM_EXTRACT, VIRTKEY, SHIFT
     VK_DELETE,     IDM_Delete_selected, VIRTKEY
     "T",            IDM__TEST_ARCHIVE, VIRTKEY, SHIFT
     "F",            IDM_FIND_IN_ARCHIVE, VIRTKEY, CONTROL
