--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -124,14 +124,14 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VIS
 CAPTION "About AZip"
 FONT 8, "Ms Shell Dlg"
 {
-    ICON            AZip_Icon, IDC_STATIC, 9, 12, 22, 22, SS_ICON
+    ICON            AZip_Icon, IDC_STATIC, 9, 12, 85, 79, SS_ICON
     LTEXT           "AZip - a portable Zip user interface", IDC_STATIC, 50, 10, 165, 8, SS_LEFT
     LTEXT           "Copyright © Gautier de Montmollin 2012", IDC_STATIC, 50, 25, 151, 8, SS_LEFT
     LTEXT           "MIT Open Source License", IDC_STATIC, 50, 40, 100, 8, SS_LEFT
     LTEXT           "Internet:", IDC_STATIC, 10, 60, 30, 8, SS_LEFT
     LTEXT           "http://sf.net/projects/azip", AZip_URL, 57, 60, 132, 8, SS_LEFT
     LTEXT           "Version:", IDC_STATIC, 10, 80, 30, 8, SS_LEFT
-    LTEXT           "0.95", IDC_STATIC, 57, 80, 132, 8, SS_LEFT
+    LTEXT           "0.95", Version_label, 57, 80, 132, 8, SS_LEFT
     GROUPBOX        "Software made with the following free, open source components:", IDC_STATIC, 5, 105, 247, 81
     LTEXT           "GNAT -  free Ada compiler", GNAT_URL, 23, 119, 100, 8, SS_LEFT
     LTEXT           "GNAT_Version", GNAT_Version, 133, 119, 113, 8, SS_LEFT
@@ -141,6 +141,25 @@ FONT 8, "Ms Shell Dlg"
     LTEXT           "ZA_Version", ZipAda_Version, 133, 164, 113, 8, SS_LEFT
     DEFPUSHBUTTON   "Close", IDOK, 103, 190, 50, 14
     PUSHBUTTON      "Credits", Credits_button, 5, 190, 50, 14, WS_DISABLED
+}
+
+
+
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
+File_exists_box DIALOG 0, 0, 359, 95
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
+CAPTION "File already exists"
+FONT 8, "Ms Shell Dlg"
+{
+    PUSHBUTTON      "Yes", Overwrite_Yes, 4, 74, 50, 14
+    DEFPUSHBUTTON   "No", Overwrite_No, 64, 74, 50, 14
+    PUSHBUTTON      "All", Overwrite_All, 124, 74, 50, 14
+    PUSHBUTTON      "None", Overwrite_None, 184, 74, 50, 14
+    PUSHBUTTON      "Rename", Overwrite_Rename, 244, 74, 50, 14
+    PUSHBUTTON      "Cancel", IDCANCEL, 304, 74, 50, 14
+    LTEXT           "A file with the same name exists on the target location.", IDC_STATIC, 10, 7, 258, 8, SS_LEFT
+    LTEXT           "(name)", Conflict_simple_name, 10, 25, 345, 8, SS_LEFT
+    LTEXT           "(location)", Conflict_location, 10, 49, 340, 8, SS_LEFT
 }
 
 
@@ -157,6 +176,21 @@ FONT 8, "Ms Shell Dlg"
     LTEXT           "Entry &name ( if empty: all names )", IDC_STATIC, 9, 7, 172, 8, SS_LEFT
     EDITTEXT        Content_to_be_searched, 9, 54, 172, 12, ES_AUTOHSCROLL
     LTEXT           "&Content ( if empty: any content )", IDC_STATIC, 9, 41, 172, 8, SS_LEFT
+}
+
+
+
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
+Password_box DIALOG 0, 0, 186, 95
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
+CAPTION "Password"
+FONT 8, "Ms Shell Dlg"
+{
+    DEFPUSHBUTTON   "OK", IDOK, 72, 74, 50, 14
+    PUSHBUTTON      "Cancel", IDCANCEL, 127, 74, 50, 14
+    EDITTEXT        Password_edit, 13, 42, 162, 13, ES_AUTOHSCROLL
+    LTEXT           "The current password is invalid.", IDC_STATIC, 13, 8, 157, 8, SS_LEFT
+    LTEXT           "Please enter a new password:", IDC_STATIC, 14, 22, 159, 8, SS_LEFT
 }
 
 
